# ollama-reverse

./: .gitignore  .synapseignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  go.mod  go.sum
.thorough-night-worker/logs/: 2026-02-02_01-39-28-session.md
anthropic/: converter.go  helpers.go  streaming.go  types.go
api/: client.go  client_api.go  client_stream.go  types.go  types_embed.go  types_generate.go  types_model.go  types_options.go  types_siglip.go  types_tools.go  types_utils.go
app/server/: inference.go  logging.go  path.go  process.go  server.go
app/store/: database_chat.go  database_core.go  database_message.go  database_migrations.go  database_relations.go  database_settings.go  store_core.go  store_operations.go  store_types.go
app/tools/: browser_actions.go  browser_core.go  browser_crawl.go  browser_search.go  browser_utils.go  browser_websearch.go
app/ui/: chat_crud.go  chat_helpers.go  chat_process.go  chat_stream.go  chat_tools.go  client.go  handler.go  request.go  settings.go  types.go  utils.go
app/updater/: updater_darwin.go  updater_darwin_upgrade.go  updater_darwin_verify.go
app/webview/: webview_bindings.go  webview_core.go
app/wintray/: eventloop.go  instance.go  tray.go  tray_icon.go  tray_menu.go
cmake/: siglipConfig.cmake.in
cmd/: cmd.go  cmd_auth.go  cmd_builders.go  cmd_display.go  cmd_generate.go  cmd_list.go  cmd_model.go  cmd_model_blob.go  cmd_model_create.go  cmd_model_ops.go  cmd_pull_push.go  cmd_run.go  cmd_serve.go  cmd_show.go  cmd_utils.go  interactive_commands.go  interactive_main.go  interactive_show.go  interactive_usage.go  interactive_utils.go
cmd/config/: integrations.go  integrations_cmd.go  integrations_models.go  selector_multi.go  selector_prompt.go  selector_render.go  selector_single.go  selector_terminal.go  selector_types.go
cmd/vision-benchmark/: encoders_cgo.go  encoders_nocgo.go  main.go
convert/: convert_adapter.go  convert_kv.go  convert_model.go  convert_types.go  tokenizer_parser.go  vocabulary.go
discover/: runner_discovery.go  runner_helpers.go  runner_refresh.go
docs/: audit-convert-runner-phase11.md
docs/benchmarks/: README.md
envconfig/: config.go  config_features.go  config_utils.go
fs/ggml/: filetype.go  ggml.go  ggml_graph.go  ggml_kv.go  ggml_tensor.go  gguf.go  gguf_array.go  gguf_container.go  gguf_model.go  gguf_reader.go  gguf_types.go  gguf_write.go  tensortype.go
fs/gguf/: file.go  file_accessors.go  file_read.go
harmony/: harmony_handler.go  harmony_tools.go  harmonyparser.go
huggingface/: cache.go  cache_test.go  client.go  converter.go  detect.go  detect_test.go  download.go  known_models.go  known_models_test.go  preprocessor.go  preprocessor_test.go  types.go
kvcache/: constructors.go  forward.go  sequence_ops.go  tensor_ops.go  types.go
llama/: llama_context.go  llama_core.go  llama_model.go  llama_sampling.go  llama_vision.go
llm/: server_create.go  server_embedding.go  server_inference.go  server_layout.go  server_load.go  server_load_ollama.go  server_memory.go  server_resource.go  server_runner.go  server_status.go  server_types.go  server_utils.go
middleware/: openai_chat.go  openai_images.go  openai_middleware.go  openai_models.go  openai_responses.go  openai_types.go
ml/: backend.go  context.go  device_env.go  device_info.go  device_layers.go  device_runner.go  dump.go  types.go
model/: model.go  reflect.go
model/parsers/: cogito.go  cogito_eat.go  functiongemma.go  functiongemma_values.go  glm46.go  glm46_helpers.go  lfm2.go  lfm2_helpers.go  lfm2_json.go  ministral.go  ministral_eat.go  ministral_json.go  olmo3.go  olmo3_helpers.go  qwen3coder.go  qwen3coder_helpers.go
openai/: openai_from.go  openai_image.go  openai_to.go  openai_types.go  responses_builder.go  responses_convert.go  responses_stream.go  responses_stream_builder.go  responses_stream_events.go  responses_types.go  responses_unmarshal.go
parser/: command.go  files.go  parser.go
readline/: buffer.go  buffer_cursor.go  buffer_edit.go  input.go  readline.go  terminal.go
scripts/: benchmark.py  convert_dinov2.py  convert_eva_clip.py  convert_nomic_vision.py  convert_openclip.py  convert_siglip.py  gguf_writer.py  quantization.py
server/: create.go  create_convert.go  create_convert_config.go  create_convert_gguf.go  create_convert_safetensors.go  create_layers.go  download.go  download_blob.go  handler_siglip.go  handlers_vision.go  handlers_vision_backends.go  handlers_vision_hf.go  handlers_vision_models.go  handlers_vision_similarity.go  helpers_vision_hf.go  images_http.go  images_model.go  images_operations.go  images_registry.go  images_transfer.go  layer_setters.go  layer_utils.go  router_vision.go  routes.go  routes_chat.go  routes_chat_completion.go  routes_chat_handler.go  routes_chat_remote.go  routes_embed.go  routes_generate.go  routes_generate_completion.go  routes_generate_handler.go  routes_generate_image.go  routes_generate_remote.go  routes_generate_types.go  routes_middleware.go  routes_misc.go  routes_models.go  routes_models_crud.go  routes_models_show.go  (+26 more)
siglip/: CMakeLists.txt  embedding.go  encode.go  enums.go  model.go  options.go  siglip.cpp  siglip.go  siglip.h  siglip_core.cpp  siglip_gguf.cpp  siglip_image.cpp  siglip_inference.cpp  siglip_internal.h  siglip_serialize.cpp  siglip_system.cpp  siglip_transformer.cpp  types.go  utils.go  vision_adapter.go  vision_register.go
siglip/tools/siglip-cli/: CMakeLists.txt  main.cpp
template/: execute.go  nodes.go  template.go  types.go
tools/: tools_parser.go  tools_search.go
tools/siglip-cli/: CMakeLists.txt  args.cpp  args.h  main.cpp  output.cpp  output.h
vision/: config.go  factory.go  formats.go  formats_test.go  gguf.go  image.go  image_test.go  normalize.go  normalize_test.go  options.go  registry.go  registry_backend.go  registry_backend_create.go  registry_backend_global.go  registry_global.go  registry_hf.go  selector.go
vision/nomic_cpp/: CMakeLists.txt  nomic.h  nomic_core.cpp  nomic_inference.cpp  nomic_internal.h  nomic_preprocess.cpp
x/cmd/: run.go  (+6 more)
(+242 files in other folders)
